spotlight on hover, fix z-index issue

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,8 +8,8 @@ $grayDarker: #424242;
 $grayDarkest: #212121;
 $black: #000;
 
-$red: #F44336;
-$redLight: #EF9A9A;
+$darkGray: #292323;
+$darkBlue: #0d131e;
 $yellow: #FFF59D;
 
 $highlight: $yellow;
